# musipelago

./: .gitignore  README.md  musipelago.spec  pyproject.toml
src/musipelago/: backends.py  client_ui_components.py  ff_audio_player.py  kivy_audio_player.py  musipelago_apworld_gen.py  musipelago_client.py  musipelagoapwgen.kv  musipelagoclient.kv  plugin_loader.py  utils.py  utils_client.py  vlc_audio_player.py
src/musipelago/apworld_template/: Items.py.j2  Locations.py.j2  Options.py.j2  Regions.py.j2  Rules.py.j2  Types.py.j2  __init__.py.j2  archipelago.json.j2
src/musipelago/plugins/: local_files_backend.py  subsonic_backend.py
